api-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: envoy
  labels:
    app: api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      name: api
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: juliocesarmidia/http-simple-api:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 9000
            name: api-port
          env:
          - name: MESSAGE
            valueFrom:
              fieldRef:
                fieldPath: status.podIP
          - name: API_PORT
            value: "9000"
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: envoy

spec:
  clusterIP: None
  ports:
  - name: api-port
    port: 9000
    targetPort: api-port
    protocol: TCP

  selector:
    app: api
