envoy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: default
  labels:
    app: envoy

spec:
  type: ClusterIP
  ports:
  - name: envoy-http
    port: 80
    targetPort: envoy-http
    protocol: TCP

  - name: envoy-admin
    port: 9901
    targetPort: envoy-admin
    protocol: TCP

  selector:
    app: envoy
