ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: envoy

  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/lb-method: "least_conn"
    # nginx.org/lb-method: "round_robin"

spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: envoy-svc
            servicePort: 80
