namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx

---

apiVersion: v1
kind: Namespace
metadata:
  name: envoy
